# Reversal_Curse

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
config/: __init__.py  settings.py
dashboard/: app.py
dashboard/templates/: analysis.html  base.html  create_study.html  dashboard.html  domain_studies.html  error.html  export.html  figures.html  intervention.html  login.html  longitudinal.html  neural_studies.html  session_detail.html  sessions.html  studies.html
docs/: IRB_TEMPLATE.md  REPRODUCIBILITY.md  pre_registration.md
experiment/backend/: api_extensions.py  app.py
experiment/frontend/static/css/: styles.css
experiment/frontend/static/js/: experiment.js
experiment/frontend/templates/: complete.html  experiment.html  index.html
scripts/: generate_synthetic_data.py  run_all_analyses.py  run_dashboard.sh  run_experiment.sh  run_full_pipeline.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  duolingo.py  effect_sizes.py  experimental.py  longitudinal.py  neural.py  statistics.py  wikipedia.py
src/analysis/domains/: __init__.py  climate.py  medical.py
src/data/: __init__.py  models.py  preprocessing.py
src/experiment/: __init__.py  stimuli.py
src/models/: __init__.py  bayesian.py  intervention.py  neural_network.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py  figures.py
tests/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_statistics.py  test_stimuli.py
